jaden's bs frontend

--- a/popup.html
+++ b/popup.html
@@ -1,1 +1,25 @@
-<div id="app"></div>
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset = "utf-8">
+        <link rel = "stylesheet" href="popup.css">
+    </head>
+    <body>
+        <div id = "time">
+            <div class = "circle" sytle = "--clr: #ffffff;">
+                <div class="dots timek"></div>
+                <svg>
+                    <circle cx = "70" cy = "70" r="70"></circle>
+                    <circle cx = "70" cy = "70" r="70" id="ss"></circle>
+                </svg>
+                <div id = "seconds">00</div>
+            </div>
+
+
+
+        </div>
+
+        
+    </body>
+
+</html>
