--- a/popup.html
+++ b/popup.html
@@ -7,14 +7,14 @@
     <body>
         <div id = "time">
             <div class = "circle" sytle = "--clr: #ffffff;">
-                <div class="dots timek"></div>
+                <div class="dots time"></div>
                 <svg>
                     <circle cx = "70" cy = "70" r="70"></circle>
                     <circle cx = "70" cy = "70" r="70" id="ss"></circle>
                 </svg>
                 <div id = "seconds">00</div>
             </div>
-
+           
 
 
         </div>
