duno what im doing but wanted to update

--- a/trial.html
+++ b/trial.html
@@ -27,6 +27,12 @@
     </div>
   
     <div class="buttons">
+      <button onclick="focus()" class="focus"> 
+        Focus
+      </button> 
+      <button onclick="rest()" class="rest">
+        Rest
+      </button>
       <button onclick="start()" class="start">
         Start
       </button>
