--- a/audio.html
+++ b/audio.html
@@ -5,12 +5,14 @@
     <link rel="stylesheet" type="text/css" href="audio.css">
 </head>
 <body>
-    <button id="playButton">Play</button>
+    <img id="playImage" src="Assets/playImage.png">
+    <img id="pauseImage" src="Assets/pauseImage.png" style="display: none;">
 
     <audio id="audioPlayer" loop>
         <source src="Assets/Lost-and-Found.mp3" type="audio/mpeg">
-        playing audio 
-    </audio>
+    
+</audio>
+
     <script src="audio.js"></script>
 </body>
 </html>
