--- a/trial.html
+++ b/trial.html
@@ -3,7 +3,11 @@
     <link rel = "stylesheet" href="trial.css">
    
 </head>
-
+<style>
+  body {
+    background-image: url('img_girl.jpg'); 
+  }
+  </style>
 <body>
   
 
