--- a/trial.html
+++ b/trial.html
@@ -5,7 +5,8 @@
 </head>
 <style>
   body {
-    background-image: url('img_girl.jpg'); 
+    
+    background-color: rgb(169, 151, 226);
   }
   </style>
 <body>
