--- a/popup.html
+++ b/popup.html
@@ -19,15 +19,15 @@
 
         </div>
 
-        <div id = "button">
-            <div class = "mentalSupport">
-            <span>MENTAL SUPPORT</span>
+        <button class = "button">
+            MENTAL<br>SUPPORT
             <!--
             <svg width="100" height="80">
                 <rect x="1" y="1" rx="20" ry="20" width="100" height="80" />
             </svg>
             --> 
-            </div>  
+            
+        </button>  
               
         </div>
 
