--- a/popup.html
+++ b/popup.html
@@ -20,7 +20,7 @@
         </div>
 
         <button class = "button">
-            MENTAL<br>SUPPORT
+            HELP
             <!--
             <svg width="100" height="80">
                 <rect x="1" y="1" rx="20" ry="20" width="100" height="80" />
