--- a/audio.html
+++ b/audio.html
@@ -10,7 +10,7 @@
         <img id="playImage" src="Assets/playImage.png">
         <img id="pauseImage" src="Assets/pauseImage.png" style="display: none;">
 
-        <audio id="audioPlayer" loop>
+        <audio id="audioPlayer">
             <source src="Assets/Tracks/Believe In Miracle.mp3" type="audio/mpeg">
         
         </audio>
