--- a/audio.html
+++ b/audio.html
@@ -14,7 +14,11 @@
             <source src="Assets/Tracks/Believe In Miracle.mp3" type="audio/mpeg">
         
         </audio>
-        <div id="currentFile">""</div>
+        <div class="titleDisplay">
+            <div id = "playingText">Playing</div>
+            <div id="currentFile">""</div>
+            <div> .</div>
+        </div>
     </div>
     <script src="audio.js"></script>
 </body>
