--- a/trial.html
+++ b/trial.html
@@ -28,16 +28,25 @@
           </g>
         </svg>
         <span id="base-timer-label" class="base-timer__label"></span>
-      </div>
-    </div>
-  
-    <div class="buttons">
+
+      </div class="buttons">
+
       <button onclick="focus()" class="focus"> 
         Focus
       </button> 
       <button onclick="rest()" class="rest">
         Rest
       </button>
+      <button onclick="add()" class="add">
+        Add 5 minutes
+        <button onclick="subtract()" class="subtract">
+          Subtract 5 minutes
+
+    </div>
+    
+
+    <div class="buttons">
+      
       <button onclick="start()" class="start">
         Start
       </button>
