--- a/duckfly.html
+++ b/duckfly.html
@@ -5,8 +5,12 @@
         <link rel='stylesheet' href = 'duckfly.css'>
     </head>
     
-    <div class="uwuduck">
-        <img src="uwuduck.png" alt="uwuduck">
-    </div>
+    <body>
+        <div class="uwuduck">
+            <img src="uwuduck.png" alt="uwuduck">
+        </div>
+    
+        <script src="duckfly.js"></script>
+    </body>
 
 </html>
