--- a/popup.html
+++ b/popup.html
@@ -17,13 +17,11 @@
             </div>
         -->
 
-
-        <div class="button">
-            <button onclick="help()" class="help"> 
+        <button onclick="help()" class="help"> 
               PickMeUp
-            </button>
-        </div>
+        </button>
 
+        <script src="popup.js"></script>
         
     </body>
 
