--- a/todo.html
+++ b/todo.html
@@ -7,9 +7,10 @@
     <link rel="stylesheet" href= "todostyle.css">
 </head>
 <body>
-    <div class="container"></div>
+    <div class="container">
 
      <div class="todo-app"></div>
      <h2> To-Do List <img src="todoAssets/toDoListIcon.png"></h2>
+    </div>
 </body>
 </html>
