--- a/todo.html
+++ b/todo.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Healthy To-Do List </title>
+    <title>Your Healthy To-Do List</title>
     <link rel="stylesheet" href= "todostyle.css">
 </head>
 <body>
     <div class="container">
 
      <div class="todo-app"></div>
-     <h2> To-Do List <img src="todoAssets/toDoListIcon.png"></h2>
+        <h2> To-Do List<img src="todoAssets/toDoListIcon3.png"></h2>
     </div>
 </body>
 </html>
