--- a/todo.html
+++ b/todo.html
@@ -29,7 +29,7 @@
                         <input
                             type = "text"
                             class = "text"
-                            value = "my shiny task (copied)"
+                            value = "My New Task(s):"
                         />
                     </div>
                     <div class = "actions">
