--- a/todo.html
+++ b/todo.html
@@ -22,7 +22,7 @@
     </header>
     <main>
         <section class = "task-list">
-            <h2>Tasks</h2>
+            <h2>Your Healthy To-Do List</h2>
             <div id = "tasks">
                 <div class = "tasks">
                     <div class = "content">
