--- a/todo.html
+++ b/todo.html
@@ -5,7 +5,7 @@
     <meta http-equiv= "X-UA-Compatable" content = "IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Your Healthy To-Do List</title>
-    <link rel="stylesheet" href= "todostyle.css">
+    <link rel="stylesheet" href= "todostylenew.css">
 </head>
 <body>
     <header>
@@ -40,5 +40,6 @@
             </div>
         </section>
     </main>
+    <script src = "todo.js"></script>
 </body>
 </html>
