--- a/todo.html
+++ b/todo.html
@@ -30,6 +30,7 @@
                             type = "text"
                             class = "text"
                             value = "My New Task(s):"
+                            readonly
                         />
                     </div>
                     <div class = "actions">
