fixed chrome extension requirements (dom listen) - jaden

--- a/ACTIVE.html
+++ b/ACTIVE.html
@@ -37,16 +37,16 @@
     <div class = "buttons">
 
         <div class="upperbuttons">
-            <button onclick="focus()" class="focus"> 
+            <button  class="focus"> 
                 Focus
             </button> 
-            <button onclick="rest()" class="rest">
+            <button  class="rest">
                 Rest
             </button>
-            <button onclick="subtract()" class="subtract">
+            <button  class="subtract">
                 Remove 5 mins
             </button>
-            <button onclick="add()" class="add">
+            <button  class="add">
                 Add 5 minutes
             </button>
         
@@ -58,13 +58,13 @@
 
         <div class="lowerbuttons">
             
-            <button onclick="start()" class="start">
+            <button  class="start">
             Start
             </button>
-            <button onclick="stop()" class="stop">
+            <button class="stop">
             Stop
             </button>
-            <button onclick="reset()" class="reset">
+            <button class="reset">
             Reset
             </button>
         </div>
