--- a/popup.html
+++ b/popup.html
@@ -17,9 +17,7 @@
             </div>
         -->
 
-        <button onclick="help()" class="help"> 
-              PickMeUp
-        </button>
+        <button id="help">PickMeUp</button>
 
         <script src="popup.js"></script>
         
