--- a/todo.html
+++ b/todo.html
@@ -24,7 +24,15 @@
         <section class = "task-list">
             <h2>To-Do</h2>
             <div id = "tasks">
-                
+                <div class="task">
+                    <div class="content">
+                        <input class="text" type = "text" readonly = "readonly" >
+                    </div>
+                    <div class="actions">
+                        <button class = "edit" fdprocessedid="dydjx">Edit</button>
+                        <button class = "delete" fdprocessedid="kewldq">Delete</button>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
