updated alarm ring - jaden

--- a/ACTIVE.html
+++ b/ACTIVE.html
@@ -6,6 +6,10 @@
     
 </head>
 <body>
+    <audio id="audioRingPlayer">
+        <source src="Assets/alarmRing.mp3" type="audio/mpeg">
+    
+    </audio>
 
     <div id="app">
         <div class="base-timer">
