YOU CANNOT CHANGE THIS

--- a/todo.html
+++ b/todo.html
@@ -29,8 +29,7 @@
                         <input class="text" type = "text" readonly = "readonly" >
                     </div>
                     <div class="actions">
-                        <button class = "edit" fdprocessedid="dydjx">Edit</button>
-                        <button class = "delete" fdprocessedid="kewldq">Delete</button>
+                        <button class = "delete" fdprocessedid="kewldq">YOU CANNOT DELETE THIS</button>
                     </div>
                 </div>
             </div>
