jaden's midnight stroll

--- a/ACTIVE.html
+++ b/ACTIVE.html
@@ -6,6 +6,26 @@
     
 </head>
 <body>
+
+    <div class="stars">
+        <div class="star"></div>
+        <div class="star"></div>
+        <div class="star"></div>
+        <div class="star"></div>
+        <div class="star"></div>
+        <div class="star"></div>
+        <div class="star"></div>
+        <div class="star"></div>
+        <div class="star"></div>
+        <div class="star"></div>
+        <div class="star"></div>
+        <div class="star"></div>
+        <div class="star"></div>
+      </div>
+
+
+
+
     <audio id="audioRingPlayer">
         <source src="Assets/alarmRing.mp3" type="audio/mpeg">
     
