random images when press button PLEASE DONT SCREW

--- a/popup.html
+++ b/popup.html
@@ -17,7 +17,7 @@
             </div>
         -->
 
-        <button id="help">PickMeUp</button>
+        <button id="help">CheerMeUp</button>
 
         <script src="popup.js"></script>
         
