--- a/todo.html
+++ b/todo.html
@@ -26,10 +26,10 @@
             <div id = "tasks">
                 <div class="task">
                     <div class="content">
-                        <input class="text" type = "text" readonly = "readonly" >
+                        <input class="text" type = "text" readonly = "readonly" >Touch grass<input>
                     </div>
                     <div class="actions">
-                        <button class = "delete" fdprocessedid="kewldq">YOU CANNOT DELETE THIS</button>
+                        
                     </div>
                 </div>
             </div>
