--- a/todo.html
+++ b/todo.html
@@ -12,7 +12,7 @@
     <script>
         var window;
         function openWin() {
-            window = window.open("", "", "width= 500, height= 1000");
+            window = window.open("", "" , "width= 500, height= 1000");
         }
     </script>
     <header>
@@ -33,7 +33,8 @@
             <div id = "tasks">
                 <div class="task">
                     <div class="content">
-                        <input class="text" type = "text" readonly = "readonly" >Touch grass<input>
+                        <t2>Touch Grass</t2>
+
                     </div>
                     <div class="actions">
                         
