--- a/todo.html
+++ b/todo.html
@@ -33,8 +33,17 @@
             <div id = "tasks">
                 <div class="task">
                     <div class="content">
+                        <font color = "white">
                         <t2>Touch Grass</t2>
-
+                    </div>
+                    <div class="actions">
+                        
+                    </div>
+                </div>
+                <div class="task">
+                    <div class="content">
+                        <font color = "white">
+                        <t2>Drink Water</t2>
                     </div>
                     <div class="actions">
                         
