--- a/todo.html
+++ b/todo.html
@@ -34,7 +34,7 @@
                 <div class="task">
                     <div class="content">
                         <font color = "white">
-                        <t2>Touch Grass and Exercise 30 Minutes</t2>
+                        <t2>Touch Grass</t2>
                     </div>
                     <div class="actions">
                         
